--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -6,25 +6,25 @@
 \chapter{Adsorption Energies Sampling}
 \vspace*{-1\baselineskip}
 
-In this chapter, I will introduce three different energy sampling techniques that can be used to determine an adsorption enthalpy and for some method it is also possible to deduce the Henry constant value. 
+This chapter will introduce three distinct energy sampling techniques that can be used to determine an adsorption enthalpy, and, in some cases, deduce Henry constant values.
 
 \section{Voronoi sampling}
 
-I will start with a sampling technique that was already studied in previous works for the calculation of geometrical descriptors mainly but also more recently to derive an energy-based descriptor\autocite{Simon_2015}. This sampling method is rather biased since it only consider a sparse sampling based on a Voronoi decomposition that is based little prior physical knowledge and that I will explain in more details in the following. 
+The first technique to be discussed has been previously studied for mcalculating geometric descriptors and, more recently, for deriving energy-based descriptors\autocite{Simon_2015}. This sampling method is relatively biased as it relies on a sparse sampling approach based on Voronoi decomposition, which is limited in terms of incorporating prior physical knowledge. A more detailed explanation of this method will be provided in the subsequent discussion. A detailed explanation of this method will follow.
 
 \subsection{Theoretical considerations}
 
-In mathematics, a tessellation of a given space corresponds to a partition into non-overlapping subspaces. In the Voronoi tessellation, named after Georgy Feodosevich Voronoy, a set of points (seeds) are associated to a tessellation of regions (Voronoi cells) so that each seed has a cell whose points are closer to this seed than any other seeds.\autocite{Rycroft_2009} Applied in materials science, the Voronoi cells attributed to each atom of the framework can be used to determine key geometrical descriptors (void volume, accessible surface area, pore sizes). This decomposition can also be used to sample adsorption energies as introduced by Simon et al. --- an average of the interaction energies was calculated on the accessible vertices of each Voronoi cell.\autocite{Simon_2015}
+In mathematics, a tessellation of a given space refers to the partitioning of this space into non-overlapping subspaces. In the Voronoi tessellation, named after Georgy Feodosevich Voronoy, a set of points (seeds) corresponds to a tessellation of regions (Voronoi cells). These cells are designed such that each seed possesses a cell wherein all points are closer to that seed than any other seeds.\autocite{Rycroft_2009} When applied to materials science, the Voronoi cells attributed to each atom of the framework can be leveraged to determine key geometric descriptors (void volume, accessible surface area, pore sizes). This decomposition can also be used to sample adsorption energies, as introduced by Simon et al. --- an average of the interaction energies was calculated on the accessible vertices of each Voronoi cell.\autocite{Simon_2015}
 
 \subsubsection{Equal radii}
 
-In a tridimensional space, let us consider the positions ${(\vect{x}_k)}_{k\in\{1,\ldots,n\}}$ of the $n$ points in a box $B$ that could be periodically propagated in the whole space. For every $k\in\{1,\ldots,n\}$, we can then define a subspace $S_{k}$ (also called Voronoi cell) around the atom $k$ so that any point $\vect{x}$ inside this subspace is closer to the position $\vect{x}_k$ than to any other points $\vect{x}_l$ ($l\neq k$). 
+In a tridimensional space, consider the positions ${(\vect{x}_k)}_{k\in\{1,\ldots,n\}}$ of the $n$ points in a box $B$ that could be periodically propagated in the whole space. For each $k\in\{1,\ldots,n\}$, a subspace $S_{k}$ (also called Voronoi cell) can be defined around the atom $k$, encompassing all points $\vect{x}$ within this subspace that are closer to the position $\vect{x}_k$ than to any other points $\vect{x}_l$ ($l\neq k$). 
 
 \begin{equation}\label{eq:voronoi_partition}
   S_{k} = \left\{\vect{x} \in B\ \ |\ \ \forall\ l\neq k,\ {\lVert \vect{x}-\vect{x}_k \rVert}_2 \leq {\lVert \vect{x}-\vect{x}_l \rVert}_2 \right\}
 \end{equation}
 
-The set of all these 3D polyhedral subspaces $S_{k}$ is then called the Voronoi partition of the space $B$. The edges and vertices of these polyhedra can then give valuable information of the void space between the adjacent Voronoi cells associated to them. We can quickly use them to determine the accessible and inaccessible points of the void space. For instance, a vertex $\vect{v}$ of $p$ subspaces $\left\{V_{i_1},\ldots,V_{i_p}\right\}$ is the closest point to the atomic positions $\vect{x}_{i_1},\ldots,\vect{x}_{i_p}$ --- this can simply be proven by combining the different conditions of equation~\ref{eq:voronoi_partition}. The same assessment can be done for any point on an edge adjacent to some subspaces, it will be closer to the atoms associated with these subspaces than to any other atoms. 
+The set of all these 3D polyhedral subspaces $S_{k}$ is termed the Voronoi partition of the space $B$. The edges and vertices of these polyhedra offer valuable information regarding the void space between adjacent the Voronoi cells associated with them. By leveraging this information, it becomes feasible to determine the accessible and inaccessible points within the void space. For instance, a vertex $\vect{v}$ of $p$ subspaces $\left\{V_{i_1},\ldots,V_{i_p}\right\}$ is the point closest to the atomic positions $\vect{x}_{i_1},\ldots,\vect{x}_{i_p}$ --- this can be easily demonstrated by combining different conditions outlined in the equation~\ref{eq:voronoi_partition}. The same assessment can be performed for any point located on an edge adjacent to certain subspaces, as it will be closer to the atoms associated with these subspaces than to any other atoms. 
 
 
 \begin{figure}[ht]
@@ -35,27 +35,27 @@ The set of all these 3D polyhedral subspaces $S_{k}$ is then called the Voronoi 
   \caption{Bidimensional illustrations of a Voronoi decomposition using three types of algorithm: (i) for equally sized circles using the equation~\ref{eq:voronoi_partition} (\url{www.shadertoy.com/view/MslGD8}) (ii) for unequally sized circles using the Apollonian Voronoi decomposition condition~\ref{eq:r_voronoi_apollonian} (\url{www.shadertoy.com/view/4sd3D7}) and (iii) another algorithm for unequally sized circles using the radical Voronoi condition~\ref{eq:r_voronoi_radical} (\url{www.shadertoy.com/view/4tV3z3}). Note that the second picture shows the curved boundaries between the Voronoi cells, while the switch to the radical Voronoi decomposition gives straight line boundaries.}\label{fgr:voronoi_illustration}
 \end{figure}
 
-This regular Voronoi tessellation can only be used to separate the space for equally sized atoms because it sets the boundaries at equidistance of all the surrounding atoms, as shown on Figure~\ref{fgr:voronoi_illustration}. For unequally sized atoms, this type of definition could be undesired since the boundary can be closer to the surface of an atom than of another. The initial thought behind employing a Voronoi decomposition is based on delimiting a region for each atom that is closer to this atom than any other one. The ambiguity of this definition relies on the definition of ``closeness''. In this regular Voronoi decomposition, we define closeness using the distance between the center of mass of the different atoms, which is problematic for unequally distributed radii.
+This regular Voronoi tessellation is suitable only for separating space among equally sized atoms, as it sets the boundaries at equidistance from all the surrounding atoms, as shown in Figure~\ref{fgr:voronoi_illustration}. For atoms with unequal sizes, this type of definition may not be desirable, as the boundary could be closer to the surface of an atom compared to another. The initial rationale behind using a Voronoi decomposition is to delimit a region for each atom that is closer to that specific atom than any other. The ambiguity of this definition arises from the definition of ``closeness''. In this regular Voronoi decomposition, closeness is determined based on the distance between the center of mass of different atoms, which poses challenge for unequally distributed radii.
 
 \subsubsection{Unequal radii}
 
-The last definition of the Voronoi decomposition works only for equal-sized atoms because the closest region to an atom is also the closest to its center of mass, which does not apply to the complex atomic structures of nanoporous frameworks. To model the atomic radii $r_1,\ldots,r_n$ of the points $\vect{x}_1,\ldots,\vect{x}_n$ in the same box $B$, we can implement a so-called Apollonian Voronoi diagram.\autocite{voronoi_apollonian} For every $k\in\{1,\ldots,n\}$, the new subspaces $A_{k}$ are defined as follows:
+To address this limitation, an alternative approach called the Apollonian Voronoi diagram can be implemented to model the atomic radii. The definition of the Voronoi decomposition, as previously discussed, is limited to equal-sized atoms, as the closest region to an atom is also the closest to its center of mass. This limitation does not apply to the complex atomic structures found in nanoporous frameworks. To overcome this, the Apollonian Voronoi diagram\autocite{voronoi_apollonian} can be utilized to model the atomic radii $r_1,\ldots,r_n$ of points $\vect{x}_1,\ldots,\vect{x}_n$ within the same box $B$. For every $k\in\{1,\ldots,n\}$, the new subspaces $A_{k}$ are defined as follows:
 
 \begin{equation}\label{eq:r_voronoi_apollonian}
   A_{k} = \left\{\vect{x} \in B\ \ |\ \ \forall\ l\neq k,\ {\lVert \vect{x}-\vect{x}_k \rVert}_2 - r_k \leq {\lVert \vect{x}-\vect{x}_l \rVert}_2 - r_l \right\}
 \end{equation}
 
-This new definition of the Voronoi diagram is built on the intuitive property closeness to the surface of the atom instead of the center of mass. It deals therefore with an unequal distribution of atomic radii, because it is now dependent on the radii. However, as shown on Figure~\ref{fgr:voronoi_illustration}, this first implementation has a very convenient definition, but the edges of the subspaces are curved, which makes it harder to use computationally. 
+This new definition of the Voronoi diagram, takes into account the intuitive property of closeness to the atom's surface rather than its center of mass. This adjustment allows for an unequal distribution of atomic radii, as the diagram now depends on these radii. However, as illustrated in Figure~\ref{fgr:voronoi_illustration}, the initial implementation presents a convenient definition at the cost of curved edges, which introduces computational challenges.
 
-For this reason a less intuitive implementation is more commonly used, which is called the radical Voronoi tessellation or power diagram or Laguerre-Voronoi diagram.\autocite{aurenhammer_1987} As shown on Figure~\ref{fgr:voronoi_illustration}, the subspaces obtained using this method are now convex polygons with straight edges instead of curved ones. The condition is way less intuitive because the condition does not rely on a simple definition. The subspaces $V_k$ are now defined by the following condition:
+To overcome these challenges and enhance computational efficiency, a less intuitive but more commonly used implementation known as the radical Voronoi tessellation, power diagram or Laguerre-Voronoi diagram\autocite{aurenhammer_1987} is preferred. As depicted in Figure~\ref{fgr:voronoi_illustration}, this method yields subspaces that are convex polygons with straight edges. Although the condition defining these subspaces is less intuitive, it avoids reliance on a simple definition. The subspaces $V_k$ are now defined based on the following condition:
 
 \begin{equation}\label{eq:r_voronoi_radical}
     V_{k} = \left\{\vect{x} \in B\ \ |\ \ \forall\ l\neq k,\ {\lVert \vect{x}-\vect{x}_k \rVert}_2^2 - r_k^2 \leq {\lVert \vect{x}-\vect{x}_l \rVert}_2^2 - r_l^2 \right\}
   \end{equation}
 
-In addition to the polyhedral form of the Voronoi cells, this new implementation presents interesting properties for porosity calculations in a framework of unequal spheres like in MOFs of zeolites.\autocite{voronoi_radical} First, the boundary between two overlapping spheres corresponds simply to the intersection place between the spheres. Then, the boundary between non-overlapping spheres is always in the void space between the spheres. This can be simply proven by taking a point $\vect{x}$ in $V_{k}$ and outside the sphere, we have ${\lVert \vect{x}-\vect{x}_k \rVert}_2 \geq r_k$, which implies $\forall\ l\neq k$, ${\lVert \vect{x}-\vect{x}_k \rVert}_2 \geq r_k$. The point $\vect{x}$ is therefore also not overlapping with any other atom, which means it is in the void space of the framework. 
+In addition to the polyhedral form of the Voronoi cells, this new implementation presents interesting properties for porosity calculations in frameworks composed of unequal spheres, such as MOFs of zeolites.\autocite{voronoi_radical} First, the boundary between two overlapping spheres corresponds simply to the intersection between the spheres themselves. Secondly, the boundary between non-overlapping spheres always lies within the void space separating them. This assertion can easily be demonstrated by considering a point $\vect{x}$ in $V_{k}$ and ${\lVert \vect{x}-\vect{x}_k \rVert}_2 \geq r_k$ outside the sphere, which implies $\forall\ l\neq k$, ${\lVert \vect{x}-\vect{x}_k \rVert}_2 \geq r_k$. The point $\vect{x}$ does not overlap with any other atom and resides within the framework's void space.
 
-If we now consider a point $\vect{v}$ on a boundary between $p$ Voronoi cells $\left\{V_{i_1},\ldots,V_{i_p}\right\}$, this point would verify all the conditions ${\lVert \vect{x}-\vect{x}_{i_1} \rVert}_2^2 - r_{i_1}^2 = \cdots = {\lVert \vect{x}-\vect{x}_{i_p} \rVert}_2^2 - r_{i_p}^2 = C$. We can know their minimum distance to the center of mass of all nearby atoms to test for possible overlapping. More specifically, in the Zeo++ software,\autocite{Zeo++} the Voronoi diagram is characterized by storing the minimum distance to the closest atoms and the index of the atoms for every vertices and edges (for edges that connect two different periodic images a periodic displacement vector is also stored). This information can be used to speed up the void fraction calculation, by skipping the volume calculations in the non-adsorbable Voronoi cells. It is also a fast way of determining the accessible and non-accessible surface areas and volumes.\autocite{Zeo++} Note that if the probe has a radius $r\e{probe}$, then the sphere radii considered are $r_k = r\e{atom}+r\e{probe}$.
+When considering a point $\vect{v}$ on a boundary between $p$ Voronoi cells, denoted as $\left\{V_{i_1},\ldots,V_{i_p}\right\}$, this point satisfies the conditions ${\lVert \vect{x}-\vect{x}_{i_1} \rVert}_2^2 - r_{i_1}^2 = \cdots = {\lVert \vect{x}-\vect{x}_{i_p} \rVert}_2^2 - r_{i_p}^2 = C$. It is possible to find the minimum distance to the center of mass of neighboring atoms and test possible overlapping. Specifically, in the Zeo++ software,\autocite{Zeo++} the Voronoi diagram is characterized by storing the minimum distance to the closest atoms and the corresponding atom indices for each vertex and edge (In cases where edges connect two different periodic images, a periodic displacement vector is also stored). Leveraging this information enables the acceleration of void fraction calculations by bypassing volume calculations in non-adsorbable Voronoi cells. Additionally, it provides a swift approach to determine accessible and non-accessible surface areas and volumes.\autocite{Zeo++} It is important to note that when employing a probe with a radius $r\e{probe}$, the sphere radii considered are adjusted accordingly as $r_k = r\e{atom}+r\e{probe}$.
 
 \subsection{Implementation in a screening}
 
